# cookiecutter-tuw-package

./: README.md  cookiecutter.json  copier.yml  justfile  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
scripts/: update_template_dependencies.py
template/: .pre-commit-config.yaml  CONTRIBUTING.md.jinja  Justfile.jinja  README.md.jinja  pyproject.toml.jinja  {% if ci_gitlab %}.gitlab-ci.yml{% endif %}.jinja  {% if copyright_license != "None" %}LICENSE{% endif %}.jinja  {% if include_docs %}myst.yml{% endif %}.jinja
template/ci/: {% if use_approvaltests %}setup-approval-testdata.sh{% endif %}.jinja  {% if use_docker %}deploy-docker-image.sh{% endif %}  {% if use_external_pypis %}add-pypi-indices.sh{% endif %}.jinja
template/src/{{py_import_name}}/: __init__.py.jinja
template/tests/: test_meta.py.jinja
template/{% if ci_github %}.github{% endif %}/actions/setup/: action.yml
template/{% if ci_github %}.github{% endif %}/workflows/: {% if "Lint_Format" in ci_github_workflows %}code_quality.yml{% endif %}  {% if "Test_Coverage" in ci_github_workflows %}test_coverage.yml{% endif %}.jinja  {% if "Test_Platforms" in ci_github_workflows %}test_platforms.yml{% endif %}.jinja
template/{% if include_docs %}docs{% endif %}/: index.ipynb.jinja
template/{% if use_docker %}docker{% endif %}/: Dockerfile.jinja  trunk.Dockerfile.jinja
tests/: conftest.py  test_cookiecutter.py  test_copier.py
{{cookiecutter.project_name}}/: .gitlab-ci.yml  CONTRIBUTING.md  Justfile  README.md  myst.yml  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: test_coverage.yml  test_platforms.yml
{{cookiecutter.project_name}}/docker/: Dockerfile
{{cookiecutter.project_name}}/docs/: index.ipynb
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_name}}/tests/: test_meta.py
