[project]
name = "cookiecutter-tuw-package"
version = "0.1.0"
description = "TUW Package Copier Template"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "copier>=9.0",
    "copier-template-extensions>=0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
addopts = "-rsx --verbose --color=yes"
