[project]
name = "cookiecutter-tuw-package"
version = "0.3.0"
description = "TUW Package Copier Template"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "copier>=9.0",
    "copier-template-extensions>=0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.17",
    "ty>=0.0.50",
    {include-group = "script"},
]
script = [
    "httpx>=0.28.1",
    "rich>=15.0.0",
]

[tool.pytest.ini_options]
addopts = "-rsx --verbose --color=yes"
